js/js.translator/testData/incremental/invalidation/interfaceOpenMethodsInOpenClass/lib2/MyClass.kt
private class MyClass : B() {
}

internal val myObject: B = MyClass()
